add classical radiation reactions for beams (#974)
* add radiation reactions

* remove const for particle momentum

* fix typos

* cleaning

* add CI test

* add CI to cmake

* reset benchmark for new radiation reactions CI test

* forgot to add analysis script

* update doc

* make analysis script executable

* cleaning

* fix adaptive time step CI data name

* increase CI checksum error tolerance due to random beam

* increase CI checksum error tolerance due to random beam for CUDA

* reduce multiplications

* adjust CPU CI tolerance, too

* Update tests/radiation_reactions.1Rank.sh

* Update tests/radiation_reactions.1Rank.sh

* move radiation coefficient out of kernel

* add normalized units

* deprecate old input

* add critical brackets that got omitted in inversing wp

* Apply suggestions from code review

Co-authored-by: Maxence Thévenet <maxence.thevenet@desy.de>

* more suggestions from review

* fix name of benchmark file

* fix indentation

---------

Co-authored-by: Tools <hipace.tools@desy.de>
Co-authored-by: Maxence Thévenet <maxence.thevenet@desy.de>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -257,6 +257,12 @@ if(BUILD_TESTING)
                 WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
         )
 
+        add_test(NAME radiation_reaction.1Rank
+                COMMAND bash ${HiPACE_SOURCE_DIR}/tests/radiation_reaction.1Rank.sh
+                        $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+        )
+
         add_test(NAME grid_current.1Rank
                 COMMAND bash ${HiPACE_SOURCE_DIR}/tests/grid_current.1Rank.sh
                         $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
