--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -58,8 +58,8 @@ jobs:
         brew --cache
         set +e
 
-        brew install --overwrite python@3.12
-        brew link python@3.12 --force --overwrite
+        brew install --overwrite python@3.y
+        brew link python@3.y --force --overwrite
 
         brew install fftw --only-dependencies --force --overwrite
         brew install fftw
