--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -57,7 +57,12 @@ jobs:
       run: |
         brew --cache
         set +e
+
         brew install --overwrite python
+        brew link --force --overwrite python
+
+        brew install --overwrite python@3.12
+        brew link --force --overwrite python@3.12
 
         brew install fftw --only-dependencies --force
         brew install fftw
