--- a/src/fields/fft_poisson_solver/CMakeLists.txt
+++ b/src/fields/fft_poisson_solver/CMakeLists.txt
@@ -10,6 +10,7 @@ target_sources(HiPACE
     FFTPoissonSolver.cpp
     FFTPoissonSolverPeriodic.cpp
     FFTPoissonSolverDirichlet.cpp
+    MGPoissonSolverDirichlet.cpp
 )
 
 add_subdirectory(fft)
