--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -58,6 +58,9 @@ jobs:
         brew --cache
         set +e
 
+        ls /usr/local/bin
+        rm -rf /usr/local/bin/2to3
+
         brew install fftw --only-dependencies --force
         brew install fftw
         brew link fftw
