--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -60,6 +60,8 @@ jobs:
 
         ls /usr/local/bin
         rm -rf /usr/local/bin/2to3
+        rm -rf /usr/local/bin/2to3-3.11
+        rm -rf /usr/local/bin/2to3-3.12
 
         brew install fftw --only-dependencies --force
         brew install fftw
