--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -62,6 +62,16 @@ jobs:
         rm -rf /usr/local/bin/2to3
         rm -rf /usr/local/bin/2to3-3.11
         rm -rf /usr/local/bin/2to3-3.12
+        rm -rf /usr/local/bin/idle3
+        rm -rf /usr/local/bin/idle3.12
+        rm -rf /usr/local/bin/pydoc3
+        rm -rf /usr/local/bin/pydoc3.12
+        rm -rf /usr/local/bin/python3
+        rm -rf /usr/local/bin/python3-config
+        rm -rf /usr/local/bin/python3.12
+        rm -rf /usr/local/bin/python3.12-config
+
+        brew uninstall python
 
         brew install fftw --only-dependencies --force
         brew install fftw
@@ -84,7 +94,7 @@ jobs:
         set -e
 
         brew tap openpmd/openpmd
-        brew install openpmd-api --only-dependencies --force --overwrite
+        brew install openpmd-api --only-dependencies --force
         brew install openpmd-api
         brew link openpmd-api
 
