--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -58,7 +58,10 @@ jobs:
         brew --cache
         set +e
 
-        brew uninstall --ignore-dependencies homebrew/core/python
+        rm -rf /usr/local/bin/2to3*
+        rm -rf /usr/local/bin/idle3*
+        rm -rf /usr/local/bin/pydoc3*
+        rm -rf /usr/local/bin/python3*
 
         brew install fftw --only-dependencies --force
         brew install fftw
