fix fftw and cufft

--- a/src/fields/fft_poisson_solver/CMakeLists.txt
+++ b/src/fields/fft_poisson_solver/CMakeLists.txt
@@ -10,6 +10,8 @@ target_sources(HiPACE
     FFTPoissonSolver.cpp
     FFTPoissonSolverPeriodic.cpp
     FFTPoissonSolverDirichlet.cpp
+    FFTPoissonSolverDirichletFast.cpp
+    FFTPoissonSolverDirichletExpanded.cpp
     MGPoissonSolverDirichlet.cpp
 )
 
