add transverse scaling benchmark

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -436,6 +436,15 @@ if(BUILD_TESTING)
                             $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
                     WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
             )
+
+        else()
+
+            add_test(NAME transverse_benchmark.1Rank
+                    COMMAND bash ${HiPACE_SOURCE_DIR}/tests/transverse_benchmark.1Rank
+                            $<TARGET_FILE:HiPACE> ${HiPACE_SOURCE_DIR}
+                    WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+            )
+
         endif()
     endif()
 endif()
